refactor(code): complete overhaul to improve readability and enable customizable messages